# modules/user/handler.go
@@ -2,6 +2,7 @@ package user
 
 import (
 	"ambil-api/domain"
+	"ambil-api/middlewares"
 	"fmt"
 	"net/http"
 	"time"
@@ -20,6 +21,13 @@ func NewUserHandler(v1 *gin.RouterGroup, userService Service) {
 
 	v1.POST("/login", handler.Login)
 	v1.POST("/register", handler.PostUser)
+
+	user := v1.Group("user")
+	user.POST("bookmark/merchant", middlewares.JwtAuthMiddleware(), handler.AddBookmark)
+
+	userLevels := user.Group("levels")
+	userLevels.GET("", middlewares.JwtAuthMiddleware(), handler.GetUserLevels)
+	userLevels.POST("", middlewares.JwtAuthMiddleware(), handler.CreateUserLevels)
 }
 
 // @Summary Login
@@ -90,6 +98,128 @@ func (h *userHandler) PostUser(c *gin.Context) {
 
 	c.JSON(http.StatusOK, domain.Response{
 		Data:        user,
+		ElapsedTime: fmt.Sprint(time.Since(start)),
+	})
+}
+
+// @Summary Get All User Level
+// @Description Get All User Level
+// @Accept  json
+// @Param UserLevelRequest query domain.UserLevelRequest true " UserLevelRequest Schema "
+// @Produce  json
+// @Success 200 {object} domain.Response{data=domain.UserLevelData}
+// @Router /api/v1/user/levels [get]
+// @Tags User
+func (h *userHandler) GetUserLevels(c *gin.Context) {
+	start := time.Now()
+	input := domain.UserLevelRequest{}
+
+	if err := c.ShouldBindQuery(&input); err != nil {
+		c.JSON(http.StatusBadRequest, domain.Response{
+			Message:     err.Error(),
+			ElapsedTime: fmt.Sprint(time.Since(start)),
+		})
+		return
+	}
+
+	userLevels, err := h.userService.GetAllUserLevel(input)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, domain.Response{
+			Message:     err.Error(),
+			ElapsedTime: fmt.Sprint(time.Since(start)),
+		})
+
+		return
+	}
+
+	c.JSON(http.StatusOK, domain.Response{
+		Data:        userLevels,
+		ElapsedTime: fmt.Sprint(time.Since(start)),
+	})
+}
+
+// @Summary Add Favourite Merchant
+// @Description Add Favourite Merchant
+// @Accept  json
+// @Param UserMerchantFavouriteRequest body domain.UserMerchantFavouriteRequest true " UserMerchantFavouriteRequest Schema "
+// @Produce  json
+// @Success 200 {object} domain.Response{data=domain.UserMerchantFavouriteData}
+// @Router /api/v1/user/bookmark [post]
+// @Tags User
+func (h *userHandler) AddBookmark(c *gin.Context) {
+	start := time.Now()
+	input := domain.UserMerchantFavouriteRequest{}
+
+	err := c.ShouldBindJSON(&input)
+	if err != nil {
+
+		errorMessages := []string{}
+
+		for _, v := range err.(validator.ValidationErrors) {
+			errorMessage := fmt.Sprintf("Error on field %s , condition : %s", v.Field(), v.ActualTag())
+			errorMessages = append(errorMessages, errorMessage)
+		}
+
+		c.JSON(http.StatusBadRequest, gin.H{
+			"errors ": errorMessages,
+		})
+
+		return
+	}
+
+	result, err := h.userService.AddMerchantFavourite(input)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"errors ": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, domain.Response{
+		Data:        result,
+		ElapsedTime: fmt.Sprint(time.Since(start)),
+	})
+}
+
+// @Summary Create User Level
+// @Description Create User Level
+// @Accept  json
+// @Param UserLevelRequest body domain.UserLevelRequest true " UserLevelRequest Schema "
+// @Produce  json
+// @Success 200 {object} domain.Response{data=domain.UserLevelData}
+// @Router /api/v1/user/levels [post]
+// @Tags User
+func (h *userHandler) CreateUserLevels(c *gin.Context) {
+	start := time.Now()
+	input := domain.UserLevelRequest{}
+
+	err := c.ShouldBindJSON(&input)
+	if err != nil {
+
+		errorMessages := []string{}
+
+		for _, v := range err.(validator.ValidationErrors) {
+			errorMessage := fmt.Sprintf("Error on field %s , condition : %s", v.Field(), v.ActualTag())
+			errorMessages = append(errorMessages, errorMessage)
+		}
+
+		c.JSON(http.StatusBadRequest, gin.H{
+			"errors ": errorMessages,
+		})
+
+		return
+	}
+
+	userLevels, err := h.userService.CreateUserLevel(input)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"errors ": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, domain.Response{
+		Data:        userLevels,
 		ElapsedTime: fmt.Sprint(time.Since(start)),
 	})
 }
